correção erro endereço img

--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 
       </div>
       <div class="hero-image">
-        <img src="./ChatGPT Image 21 de jun. de 2025, 18_16_02.png alt="Rocket League Car"/>
+        <img src="./ChatGPT Image 21 de jun. de 2025, 18_16_02.png" alt="Rocket League Car">
       </div>
     </section>
-
     <section class="info-section">
       <div class="card about">
      </div>
