alteraçoes com relacões a imagem

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       </div>
       <div class="hero-image">
-        <img src="./ChatGPT Image 21 de jun. de 2025, 18_16_02.png" alt="Rocket League Car">
+        <img src="./imagem octane.png" alt="Rocket League Car">
       </div>
     </section>
     <section class="info-section">
